kube-in-action/kubia/external-googe.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-google
spec:
  type: ExternalName
  externalName: google.com
  ports:
  - port: 80
