kube-in-action/kubia/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  tls:
    - hosts:
      - hogehoge
      secretName: tls-secret
  rules:
  - host: hogehoge
    http:
      paths:
      - path: /
        backend:
          serviceName: external-google
          servicePort: 80
      - path: /google
        backend:
          serviceName: external-google
          servicePort: 80
